--- a/package.json
+++ b/package.json
@@ -11,27 +11,26 @@
   "dependencies": {
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
-    "firebase": "^12.8.0",
-    "firebase-functions": "^7.0.5",
+    "firebase": "^11.0.0",
+    "firebase-functions": "^6.0.0",
     "gtfs-realtime-bindings": "^1.1.1",
     "leaflet": "^1.9.4",
     "next": "15.1.9",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0",
     "resend": "^4.0.1",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.0.0",
     "@types/file-saver": "^2.0.7",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.1.6",
-    "postcss": "^8.5.1",
-    "tailwindcss": "^4.0.0",
+    "eslint-config-next": "15.1.9",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
 }
